# animethemes-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: client.rs  error.rs  includes.rs  lib.rs  models.rs  utils.rs
src/tests/: test_client.rs
