[package]
name = "animethemes-rs"
version = "0.4.2"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/trivernis/animethemes-rs"
license = "Apache-2.0"
description = "A Rust wrapper for the AnimeThemes api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
tracing = "0.1.35"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.serde]
version = "1.0.138"
features = ["serde_derive"]

[dev-dependencies.tokio]
version = "1.19.2"
features = ["macros", "test-util"]
